# django_json_null_expression_repro

./: pyproject.toml  settings.py
django_json_null_expression_repro/: apps.py  models.py
django_json_null_expression_repro/migrations/: 0001_initial.py  0002_alter_thishasajsonfield_data.py
django_json_null_expression_repro/tests/: test_models.py
scripts/: init_db.sql
